--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "taut",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "webpack": "^4.44.1"
+  },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
   "main": "index.js",
@@ -10,7 +21,13 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack --watch --mode-development",
+    "postinstall": "webpack"
+  },
+  "engines": {
+    "node": "10.13.0",
+    "npm": "6.4.1"
   },
   "repository": {
     "type": "git",
@@ -22,5 +39,8 @@
   "bugs": {
     "url": "https://github.com/henryhannn/Taut/issues"
   },
-  "homepage": "https://github.com/henryhannn/Taut#readme"
+  "homepage": "https://github.com/henryhannn/Taut#readme",
+  "devDependencies": {
+    "webpack-cli": "^3.3.12"
+  }
 }
