--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch --mode=development",
-    "postinstall": "webpack"
+    "postinstall": "webpack",
+    "postinstall": "ng build"
   },
   "engines": {
     "node": "10.13.0",
