--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch --mode=development",
-    "postinstall": "webpack",
-    "postinstall": "ng build"
+    "postinstall": "webpack"
   },
   "engines": {
     "node": "10.13.0",
