--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: redis://redistogo:308690326e5429964fb6c7e6144c7eea@scat.redistogo.com:10886/
   channel_prefix: taut_production
